<resources>
    <string name="app_name">Andro POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Bottom Nav-->
    <string name="home">HOME</string>
    <string name="product">PRODUCT</string>
    <string name="sale">SALE</string>
    <string name="user">USER</string>
    <string name="report">REPORT</string>

    <!--Nav-->
    <string name="username">USERNAME</string>

    <!--Product-->
    <string name="category">CATEGORY</string>
    <string name="product_add">ADD PRODUCT</string>
    <string name="stock">STOCK</string>
    <string name="delete">DELETE</string>

    <!--Sale-->
    <string name="sale_add">ADD SALE</string>
    <string name="sale_record">SALE RECORD</string>


    <!--User-->
    <string name="user_add">ADD USER</string>
    <string name="user_list">USER LIST</string>


    <!--Category-->
    <string-array name="category">
        <item>--Select Category--</item>
        <item>Mobile</item>
        <item>Accessories</item>
    </string-array>
    <string name="title_activity_add_category">AddCategoryActivity</string>

    <!--Payment Type-->
    <string-array name="payment_type_array">
        <item>Cash</item>
        <item>bKash</item>
        <item>Rocket</item>
    </string-array>

    <!--GLOBAL-->
    <string name="is_active">Is Active ?</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_add_subcategory">AddSubcategoryActivity</string>
    <string name="please_select">~Please Select~</string>
    <string name="permission">Permission Needed.</string>
    <string name="storage_permission">Storage permission is needed for read or write file.</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="title_activity_add_sale">AddSaleActivity</string>
    <string name="title_activity_sale_rocord">SaleRocordActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Manage Products</string>
    <string name="slide_1_desc">The easiest way to manage your product without any hassle!</string>

    <string name="slide_2_title">Instant Sale</string>
    <string name="slide_2_desc">Make your sale instantly by searching or qrCode scanning product from stock!</string>

    <string name="slide_3_title">Multi User Facility</string>
    <string name="slide_3_desc">Manage your single or multiple shop with multi user facility!</string>

    <string name="slide_4_title">Manageable Reports</string>
    <string name="slide_4_desc">Get your stock, sale and profit report just in a click!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_filter_report">FilterReportActivity</string>
    <string name="title_activity_sale_report">SaleReportActivity</string>
    <string name="title_activity_profit_report">ProfitReportActivity</string>


</resources>
