<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/menu_one"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/product"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_product"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/sale"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/ic_sell"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_two"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/user"
                android:layout_margin="8dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_user"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/report"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_report"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>