<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.fragment.ProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/addCategory"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_category"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/addProduct"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_add"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_add"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:id="@+id/stockInfo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_storage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_marginRight="2dp">

            <ImageButton
                android:visibility="gone"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>